# mlops

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
config/: config.yaml
config/data/: data.yaml
config/model/: model.yaml
config/trainer/: trainer.yaml
matching/: dataset.py  infer.py  model.py  train.py  utils.py
